--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-cli": "~0.1",
-    "grunt-contrib-uglify": "~0.2.1",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch": "~0.4.3",
-    "grunt-contrib-jasmine": "~0.4.2"
+    "grunt-contrib-coffee": "~0.13.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-jasmine": "~1.0.0",
+    "grunt-contrib-uglify": "~0.11.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-parallel": "^0.4.1",
+    "grunt-serve": "^0.1.6"
   },
   "scripts": {
-      "test": "grunt test"
+    "test": "grunt test"
   }
 }
