--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "grunt-contrib-jasmine": "~1.0.0",
     "grunt-contrib-uglify": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-parallel": "^0.4.1",
-    "grunt-serve": "^0.1.6"
+    "grunt-parallel": "~0.4.1",
+    "grunt-serve": "~0.1.6"
   },
   "scripts": {
     "test": "grunt test"
