--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tourist",
   "version": "0.1.7",
+  "main": "tourist.js",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
